--- a/views/index.html
+++ b/views/index.html
@@ -247,7 +247,7 @@
     </script>
 </head>
 <body>    
-    <h1>DARP Node <%= me.geo %> http://<%= me.ipaddr %>:<%= me.port %> <%= config.VERSION %> ALPHA Test 0.3 - joinAnyNode</h1>
+    <h1><%= me.geo %>SUPER WAN http://<%= me.ipaddr %>:<%= me.port %> <%= config.VERSION %> ALPHA Test 0.4 - joinAnyNode</h1>
 
     <% var d = new Date(); %>
     <% function now() { var dateNow = new Date(); return dateNow.getTime(); } %>
