--- a/views/index.html
+++ b/views/index.html
@@ -247,7 +247,7 @@
     </script>
 </head>
 <body>    
-    <h1><%= me.geo %>SUPER WAN http://<%= me.ipaddr %>:<%= me.port %> <%= config.VERSION %> ALPHA Test 0.4 - joinAnyNode</h1>
+    <h1><%= me.geo %> PulseGroup Encrypted Mesh WAN http://<%= me.ipaddr %>:<%= me.port %> <%= config.VERSION %> ALPHA Test 0.5 - joinAnyNode</h1>
 
     <% var d = new Date(); %>
     <% function now() { var dateNow = new Date(); return dateNow.getTime(); } %>
@@ -274,7 +274,7 @@
         <% for (let col in pulseGroup.pulses) { %>
             <% let colEntry = pulseGroup.pulses[col]; %>
             <% let colEntryUrl = "http://" + colEntry.ipaddr + ":" + colEntry.port.toString(); %>
-            <th><a target="_blank" href="<%= colEntryUrl %>"> <%= colEntry.geo %><b><%= colEntry.mint %></b></a> </th>
+            <th><a target="_blank" href="<%= colEntryUrl %>"> <%= colEntry.geo %>@<b><%= colEntry.mint %></b></a> </th>
         <% } %>
         </tr>
 
