--- a/views/index.html
+++ b/views/index.html
@@ -4,10 +4,17 @@
 
     <link href="/css/index.css" rel="stylesheet" type="text/css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script>
+    <link href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css">
+
+<script>
         $(document).ready(function() {
             console.log("document loaded");
             fetchState();
+            $(document).ready( function () {
+                $('#extraordinary').DataTable();
+                $('#pulses').DataTable();
+                $('#mintTable').DataTable();
+            } );
         });
         
         $(window).on( "load", function() {
@@ -266,7 +273,7 @@
 
         <!-- show OWL Matrix table -->
         <br><h2><%= pulseGroup.groupName %> pulseGroup: <%= pulseGroup.groupName %></h2>
-        <table class="matrix">
+        <table id="pulses" class="matrix">
         <tr>
             <th><%= pulseGroup.groupName %> OWL Matrix</th>
 
@@ -341,7 +348,8 @@
 
         <!-- Display pulseGroup -->
         <br><h2><%= pulseGroup.groupName %> pulseGroup</h2>
-        <table class="pulses">
+        <table id="pulses" class="pulses">
+            <thead>
             <tr>
                 <th>geo</th>
                 <th>group</th>
@@ -365,6 +373,8 @@
                 <th>version</th>
                 <th>Net Earnings</th>
             </tr>
+            </thead>
+            <tbody>
         <% var total = 0; %> <!--Add up total balance of all pulses -->
         <% for (let a in pulseGroup.pulses) { %>
             
@@ -483,6 +493,7 @@
                 <td class="total_earn"><%= pulseGroup.groupName %> Earnings $ <%= total.toFixed(6).replace(/\d(?=(\d{3})+\.)/g, '$&,') %></td>
             <!--  <td class="total_earn"><%= pulseGroup.groupName %> Earnings $ <%= total.toFixed(6) %></td>  -->
             </tr>
+        </tbody>
         </table>
     <% } %>
 
