--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     <link href="/css/index.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script> src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js</script>
+    <script> src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"</script>
 <script>
         $(document).ready(function() {
             console.log("document loaded");
