DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -12,8 +12,9 @@
             fetchState();
             $(document).ready( function () {
                 $('#extraordinary').DataTable();
-                //$('#pulses').DataTable();
-                //$('#mintTable').DataTable();
+                $('#pulses').DataTable();
+                $('#mintTable').DataTable();
+                $('#matrix').DataTable();
             } );
         });
         
