DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
                 $('#extraordinary').DataTable();
                 $('#pulses').DataTable();
                 $('#mintTable').DataTable();
-                //$('#matrix').DataTable();
+                $('#matrix').DataTable();
             } );
         });
         
