--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script>
+        const NO_OWL=99999;         //TODO: This needs to change as the NO_OWL constant changes in pulseGroups.
         $(document).ready(function() {
             console.log("document loaded");
             fetchState();
@@ -48,7 +49,7 @@
                         var owls=pulseEntry.owls.split(",");
                         for(var owlEntry in owls) {
                             var srcMint=parseInt(owls[owlEntry].split("=")[0]);
-                            var owl=-99999;
+                            var owl=NO_OWL;
                             var strOwl=owls[owlEntry].split("=")[1];
                             if (typeof strOwl != "undefined") {
                                 owl=parseInt(strOwl);
@@ -176,7 +177,7 @@
                                 $("."+pulse.geo+"_"+field).text(fieldValue);
                             }
 
-                            if (pulse.owl == -99999) {
+                            if (pulse.owl == NO_OWL) {
                                 //Add NR class to entire row
                                 $("."+pulse.geo+"_state").text("NR").addClass("NR").removeClass("UP");
                             } else {
@@ -184,7 +185,7 @@
                                 $("."+pulse.geo+"_state").addClass("UP").text("UP").removeClass("NR");
                             }
                             
-                            if (pulse.owl == -99999) {
+                            if (pulse.owl == NO_OWL) {
                                 //Add NR class to entire row
                                 $("."+pulse.geo).addClass("NR").removeClass("UP");
                             } else {
@@ -239,11 +240,11 @@
                         // console.log("returning srcMint="+srcMint+" owl="+owl);
                         return parseInt(owl);
                     } else {
-                        return -99999; // no OWL measurement
+                        return NO_OWL; // no OWL measurement
                     }
                 }
             }
-            return -99999; // did not find the srcMint
+            return NO_OWL; // did not find the srcMint
         }
 
         function startTime() {
