--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -24,8 +24,10 @@ h2 {
 
 table, th, td {
     border: 1px solid black;
-    padding: 2px;
+    padding: 1px;
+    font-size: 12px;
 }
+
 .mintTable tr:first-child td {
     vertical-align: top;
 }
