--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script>
-        const NO_OWL=99999;         //TODO: This needs to change as the NO_OWL constant changes in pulseGroups.
+        const NO_OWL=99999;         //99.999seconds is our NO_MEASURETODO: This needs to change as the NO_OWL constant changes in pulseGroups.
         $(document).ready(function() {
             console.log("document loaded");
             fetchState();
