--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -25,7 +25,7 @@ h2 {
 table, th, td {
     border: 1px solid black;
     padding: 1px;
-    font-size: 12px;
+    font-weight: bold;
 }
 
 .mintTable tr:first-child td {
