DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -314,7 +314,7 @@
                  
                 <% } else { %>
                     <% let classNameNr = srcMintEntry.geo + " NR"; %>
-                    <tr class="<%= classNameNr %>"><td><%= srcMintEntry.geo %> <%= srcMintEntry.mint %></td>
+                    <tr class="<%= classNameNr %>"><td><%= srcMintEntry.mint %>-<%= srcMintEntry.geo %> </td>
 
                 <% } %>
 
