DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -36,7 +36,7 @@
             $.getJSON(url, function(pulseGroup) {
                 $(document.body).css( "background", "white" );
 
-                console.log("***************************************************************** pulseGroup="+JSON.stringify(pulseGroup,null,2));
+                console.log("********************** pulseGroup="+JSON.stringify(pulseGroup,null,2));
                 //for (var n in config) {
                 //    var pulseGroup = config[n];
                    
