--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
             $(document).ready( function () {
                 $('#extraordinary').DataTable();
                 $('#pulses').DataTable();
-                $('#mintTable').DataTable();
+                //$('#mintTable').DataTable();
                 $('#matrix').DataTable();
             } );
         });
