--- a/views/index.html
+++ b/views/index.html
@@ -297,7 +297,7 @@
         <% for (let col in pulseGroup.pulses) { %>
             <% let colEntry = pulseGroup.pulses[col]; %>
             <% let colEntryUrl = "http://" + colEntry.ipaddr + ":" + colEntry.port.toString(); %>
-            <th><%= colEntry.geo %>-<%= colEntry.mint %></th>
+            <th><%= colEntry.mint %> <%= colEntry.geo %></th>
             <!--<th><a target="_blank" href="<%= colEntryUrl %>"> <%= colEntry.geo %>@<b><%= colEntry.mint %></b></a> </th> -->
         <% } %>
         </tr>
