DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
             fetchState();
             $(document).ready( function () {
                 $('#extraordinary').DataTable();
-                $('#pulses').DataTable();
+                //$('#pulses').DataTable();
                 //$('#mintTable').DataTable();
                 $('#matrix').DataTable();
             } );
