--- a/views/index.html
+++ b/views/index.html
@@ -112,13 +112,13 @@
                             var segment2PathSelector=extraordinaryPath.intermediary+"-"+extraordinaryPath.zSide;
 
 
-
-
+                            var link=`http://${destIP}:${destPort}/extra?a=${extraordinaryPath.aSide}&i=${extraordinaryPath.intermediary}&z=${extraordinaryPath.zSide}`
+                            console.log(`link=${link}`);
 
                             //TODO: use the jquery data update APIs to add/remove rows so we get the sorting feature in jquery UI
                             //  add extraordinary path entry
 //                            $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td><div class='WORSE'>"+extraordinaryPath.direct+" ms</div></td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
-                            $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.intermediary+"</td> <td>"+extraordinaryPath.zSide+"</td> <td>"+extraordinaryPath.delta+" ms</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+(extraordinaryPath.intermediaryPathLatency-extraordinaryPath.delta)+" ms</td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
+                            $("#extraordinary").append(trLabel+'<td><a href="'+link+'">'+duration+' secs</a></td><td>'+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.intermediary+"</td> <td>"+extraordinaryPath.zSide+"</td> <td>"+extraordinaryPath.delta+" ms</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+(extraordinaryPath.intermediaryPathLatency-extraordinaryPath.delta)+" ms</td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
 
 
 
