--- a/views/index.html
+++ b/views/index.html
@@ -469,8 +469,8 @@
                     <!-- <td class="<%= classNameGeoOwls %>"><%= pulseEntry.owls.substring(0, OWLS_DISPLAYED) %></td> -->
                     <td class="<%= classNameGeoOwls %>"> <%= pulseEntry.owls.substring(0,20) %> </td>
                 <% } else { %>
-                    <td>"badpulse"</td>
-                    <td>"badpulse"</td>
+                    <td>"badLastMsg"</td>
+                    <td>"badLastMsg"</td>
                 <% } %>
                 
                 <% var deltaSeconds2 = Math.round((now() - pulseEntry.bootTimestamp) / 1000) + " secs ago"; %>
