DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -12,10 +12,10 @@
             console.log("document loaded");
             fetchState();
             $(document).ready( function () {
-                $('#extraordinary').DataTable();
-                //$('#pulses').DataTable();
-                //$('#mintTable').DataTable();
-                $('#matrix').DataTable();
+                $('#matrix').DataTable({  'iDisplayLength': 25});
+                $('#extraordinary').DataTable({  'iDisplayLength': 25});
+                $('#pulses').DataTable({  'iDisplayLength': 25});
+                $('#mintTable').DataTable({  'iDisplayLength': 25});
             } );
         });
         
