DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -491,7 +491,7 @@
             </tr>
         <% } %>
             <tr>
-                <td></td>
+                <td>Node Earnings</td>
                 <td></td>
                 <td></td>
                 <td></td>
