--- a/views/index.html
+++ b/views/index.html
@@ -267,7 +267,7 @@
     </script>
 </head>
 <body>    
-    <h1><%= me.geo %> PulseGroup Encrypted Mesh WAN http://<%= me.ipaddr %>:<%= me.port %> <%= config.VERSION %> ALPHA Test 0.7 !joinAnyNode</h1>
+    <h1><%= me.geo %> PulseGroup Encrypted Mesh WAN http://<%= me.ipaddr %>:<%= me.port %> <%= config.VERSION %> ALPHA Test 1.0</h1>
 
     <% var d = new Date(); %>
     <% function now() { var dateNow = new Date(); return dateNow.getTime(); } %>
