--- a/views/index.html
+++ b/views/index.html
@@ -151,7 +151,8 @@
                     // console.log(" pulseGroup.nodeCount="+pulseGroup.nodeCount+" nodeCountLastTime="+nodeCountLastTime );
                     if ( pulseGroup.nodeCount >= 1 ) {
                         if (nodeCountLastTime!=0) {
-                                if ( nodeCountLastTime != pulseGroup.nodeCount ) {
+                            //if ( nodeCountLastTime != pulseGroup.nodeCount ) {
+                            if ( nodeCountLastTime > pulseGroup.nodeCount ) {
                                     // console.log("NEW NODE: HERE I LOCATION RELOAD(): pulseGroup.nodeCount="+pulseGroup.nodeCount+" nodeCountLastTime="+nodeCountLastTime );
                                     location.reload();
                                 }
