--- a/views/index.html
+++ b/views/index.html
@@ -152,7 +152,7 @@
                     if ( pulseGroup.nodeCount >= 1 ) {
                         if (nodeCountLastTime!=0) {
                             //if ( nodeCountLastTime != pulseGroup.nodeCount ) {
-                            if ( nodeCountLastTime > pulseGroup.nodeCount ) {
+                            if ( nodeCountLastTime > pulseGroup.nodeCount+1 ) {
                                     // console.log("NEW NODE: HERE I LOCATION RELOAD(): pulseGroup.nodeCount="+pulseGroup.nodeCount+" nodeCountLastTime="+nodeCountLastTime );
                                     location.reload();
                                 }
