--- a/views/index.html
+++ b/views/index.html
@@ -151,8 +151,8 @@
                     // console.log(" pulseGroup.nodeCount="+pulseGroup.nodeCount+" nodeCountLastTime="+nodeCountLastTime );
                     if ( pulseGroup.nodeCount >= 1 ) {
                         if (nodeCountLastTime!=0) {
-                            //if ( nodeCountLastTime != pulseGroup.nodeCount ) {
-                            if ( nodeCountLastTime > pulseGroup.nodeCount+1 ) {
+                            if ( nodeCountLastTime != pulseGroup.nodeCount ) {  //immediately show changes so screen reflects reality
+                            //if ( nodeCountLastTime > pulseGroup.nodeCount+1 ) {
                                     // console.log("NEW NODE: HERE I LOCATION RELOAD(): pulseGroup.nodeCount="+pulseGroup.nodeCount+" nodeCountLastTime="+nodeCountLastTime );
                                     location.reload();
                                 }
