--- a/views/index.html
+++ b/views/index.html
@@ -110,13 +110,17 @@
                             var segment2PathSelector=extraordinaryPath.intermediary+"-"+extraordinaryPath.zSide;
 
 
-                            var link=`http://${me.ipaddr}:${me.port}/extra/${extraordinaryPath.aSide}/${extraordinaryPath.intermediary}/${extraordinaryPath.zSide}`
+                            //var link=`http://${me.ipaddr}:${me.port}/extra/${extraordinaryPath.aSide}/${extraordinaryPath.intermediary}/${extraordinaryPath.zSide}`
+                            var asideTerm=`http://127.0.0.1:8000/ssh?ip=${extraordinaryPath.aSideIP}`   //@WBNWBNWBNWBN
+                            var intermediaryTerm=`http://127.0.0.1:8000/ssh?ip=${extraordinaryPath.intermediaryIP}`   //@WBNWBNWBNWBN
+                            var zsideTerm=`http://127.0.0.1:8000/ssh?ip=${extraordinaryPath.zSideIP}`   //@WBNWBNWBNWBN
+                           
                             console.log(`link=${link}`);
 
                             //TODO: use the jquery data update APIs to add/remove rows so we get the sorting feature in jquery UI
                             //  add extraordinary path entry
 //                            $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td><div class='WORSE'>"+extraordinaryPath.direct+" ms</div></td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
-                            $("#extraordinary").append(trLabel+'<td><a href="'+link+'">'+duration+' secs</a></td><td>'+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.intermediary+"</td> <td>"+extraordinaryPath.zSide+"</td> <td>"+extraordinaryPath.delta+" ms</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+(extraordinaryPath.intermediaryPathLatency-extraordinaryPath.delta)+" ms</td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
+                            $("#extraordinary").append(trLabel+'<td><a href="'+link1+'">'+duration+' secs</a></td><td>'+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.intermediary+"</td> <td>"+extraordinaryPath.zSide+"</td> <td>"+extraordinaryPath.delta+" ms</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+(extraordinaryPath.intermediaryPathLatency-extraordinaryPath.delta)+" ms</td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
 
 
 
