DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -115,7 +115,7 @@
                             var intermediaryTerm=`http://127.0.0.1:8000/ssh?ip=${extraordinaryPath.intermediaryIP}`   //@WBNWBNWBNWBN
                             var zsideTerm=`http://127.0.0.1:8000/ssh?ip=${extraordinaryPath.zSideIP}`   //@WBNWBNWBNWBN
                            
-                            console.log(`link=${link}`);
+                            console.log(`links are:   asideTerm=${asideTerm} intermediaryTerm=${intermediaryTerm} zsideTerm=${zsideTerm}`);
 
                             //TODO: use the jquery data update APIs to add/remove rows so we get the sorting feature in jquery UI
                             //  add extraordinary path entry
