--- a/views/index.html
+++ b/views/index.html
@@ -34,7 +34,7 @@
             $.getJSON(url, function(pulseGroup) {
                 $(document.body).css( "background", "white" );
 
-                console.log("********************** pulseGroup="+JSON.stringify(pulseGroup,null,2));
+                //console.log("********************** pulseGroup="+JSON.stringify(pulseGroup,null,2));
                 //for (var n in config) {
                 //    var pulseGroup = config[n];
                    
@@ -118,7 +118,7 @@
                             //console.log(`links are:   asideTerm=${asideTerm} intermediaryTerm=${intermediaryTerm} zsideTerm=${zsideTerm}`);
 
 //                            $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td><div class='WORSE'>"+extraordinaryPath.direct+" ms</div></td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
-                            $("#extraordinary").append(trLabel+'<td><a href="'+aSideTerm+'">'+duration+' secs</a></td><td><a href="'+aSideTerm+'">'+extraordinaryPath.aSide+'</a></td> <td><a href="'+intermediaryTerm+'>'+extraordinaryPath.intermediary+'</td> <td><a href="'+zSideTerm+'">'+extraordinaryPath.zSide+'</a></td> <td>'+extraordinaryPath.delta+" ms</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+(extraordinaryPath.intermediaryPathLatency-extraordinaryPath.delta)+" ms</td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
+                            $("#extraordinary").append(trLabel+'<td><a href="'+aSideTerm+'">'+duration+' secs</a></td><td><a href="'+aSideTerm+'">'+extraordinaryPath.aSide+'</a></td> <td><a href="'+intermediaryTerm+'">'+extraordinaryPath.intermediary+'</td> <td><a href="'+zSideTerm+'">'+extraordinaryPath.zSide+'</a></td> <td>'+extraordinaryPath.delta+" ms</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+(extraordinaryPath.intermediaryPathLatency-extraordinaryPath.delta)+" ms</td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
 
 
                             //$("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td><div class='WORSE'>"+extraordinaryPath.direct+" ms</div></td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
