DARP Protocol with matrix and basic data graphs +

--- a/views/index.html
+++ b/views/index.html
@@ -111,9 +111,11 @@
 
 
                             //var link=`http://${me.ipaddr}:${me.port}/extra/${extraordinaryPath.aSide}/${extraordinaryPath.intermediary}/${extraordinaryPath.zSide}`
-                            var aSideTerm=`http://127.0.0.1:8000/ssh?ip=${extraordinaryPath.aSideIP}`   //@WBNWBNWBNWBN
-                            var intermediaryTerm=`http://127.0.0.1:8000/ssh?ip=${extraordinaryPath.intermediaryIP}`   //@WBNWBNWBNWBN
-                            var zSideTerm=`http://127.0.0.1:8000/ssh?ip=${extraordinaryPath.zSideIP}`   //@WBNWBNWBNWBN
+                            var aSideTerm=`http://127.0.0.1:8081/ssh?ip=${extraordinaryPath.aSideIP}`   //@WBNWBNWBNWBN  Mgmt console 
+                            var intermediaryTerm=`http://127.0.0.1:8081/ssh?ip=${extraordinaryPath.intermediaryIP}`   //@WBNWBNWBNWBN
+                            var zSideTerm=`http://127.0.0.1:8081/ssh?ip=${extraordinaryPath.zSideIP}`   //@WBNWBNWBNWBN
+                            //                        <% let encodedUrl = encodeURI("http://127.0.0.1:8081/ssh?ip=ubuntu@"+srcMintEntry.ipaddr); %>
+
                            
                             //console.log(`links are:   asideTerm=${asideTerm} intermediaryTerm=${intermediaryTerm} zsideTerm=${zsideTerm}`);
 
