--- a/views/index.html
+++ b/views/index.html
@@ -111,11 +111,11 @@
 
 
                             //var link=`http://${me.ipaddr}:${me.port}/extra/${extraordinaryPath.aSide}/${extraordinaryPath.intermediary}/${extraordinaryPath.zSide}`
-                            var aSideTerm="http://127.0.0.1:8081/ssh?ip+"+extraordinaryPath.aSideIP;   //@WBNWBNWBNWBN  Mgmt console 
+                            var aSideTerm="http://127.0.0.1:8081/ssh?ip"+extraordinaryPath.aSideIP;   //@WBNWBNWBNWBN  Mgmt console 
                             var intermediaryTerm="http://127.0.0.1:8081/ssh?ip="+extraordinaryPath.intermediaryIP;   //@WBNWBNWBNWBN
                             var zSideTerm="http://127.0.0.1:8081/ssh?ip="+extraordinaryPath.zSideIP;   //@WBNWBNWBNWBN
                            
-                            console.log("links are:   asideTerm="+asideTerm+" intermediaryTerm="+intermediaryTerm+"zsideTerm="+zsideTerm);
+                            console.log("links are:   aSideTerm="+aSideTerm+" intermediaryTerm="+intermediaryTerm+" zSideTerm="+zSideTerm);
 
 //                            $("#extraordinary").append(trLabel+"<td>"+duration+" secs</td><td>"+extraordinaryPath.aSide+"</td> <td>"+extraordinaryPath.zSide+"</td><td><div class='WORSE'>"+extraordinaryPath.direct+" ms</div></td><td></td><td>"+extraordinaryPath.intermediary+"</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+extraordinaryPath.delta+" ms</td><td></td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
                             $("#extraordinary").append(trLabel+'<td><a href="'+aSideTerm+'">'+duration+' secs</a></td><td><a href="'+aSideTerm+'">'+extraordinaryPath.aSide+'</a></td> <td><a href="'+intermediaryTerm+'">'+extraordinaryPath.intermediary+'</a></td> <td><a href="'+zSideTerm+'">'+extraordinaryPath.zSide+'</a></td> <td>'+extraordinaryPath.delta+" ms</td><td>"+extraordinaryPath.intermediaryPathLatency+" ms</td><td>"+(extraordinaryPath.intermediaryPathLatency-extraordinaryPath.delta)+" ms</td><td>"+extraordinaryPath.srcToIntermediary+"</td><td>"+extraordinaryPath.intermediaryToDest+"</td></tr>");
